--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,6 @@
-<h1>Sign up</h1>
-
-<%= form_for User.new do |f| %>
-  <fieldset>
-    <legend>Create a new user</legend>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-
-  <%= f.label :email, "Email" %>
-  <%= f.text_field :email %>
-
-  <%= f.label :password, "Password" %>
-  <%= f.password_field :password %>
-
-  <%= f.label :password_confirmation, "Confirm Password" %>
-  <%= f.password_field :password_confirmation %>
-
-  <%= f.label :about_me, "About Me" %>
-  <%= f.text_area :about_me %>
-
-  <%= f.submit "Create User" %>
-
-
-  </fieldset>
-
-<% end %>
+<%- model_class = User -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human,
+                                 :default => "New #{model_class.model_name.human}") %></h1>
+</div>
+<%= render :partial => 'form' %>
