--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = User -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+  <h1><%= @user.name %></h1>
 </div>
 
 <dl class="dl-horizontal">
@@ -8,12 +8,8 @@
   <dd><%= @user.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
   <dd><%= @user.email %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:password_digest) %>:</strong></dt>
-  <dd><%= @user.password_digest %></dd>
   <dt><strong><%= model_class.human_attribute_name(:about_me) %>:</strong></dt>
   <dd><%= @user.about_me %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:remember_token) %>:</strong></dt>
-  <dd><%= @user.remember_token %></dd>
 </dl>
 
 <div class="form-actions">
