--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -9,9 +9,9 @@
       <%= link_to 'The Greatest Site', root_path, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Users", "users_path"  %></li>
+          <li><%= link_to "Users", users_path  %></li>
           <li><%= link_to "Languages", idioms_path  %></li>
-          <li><%= link_to "Link3", "/path3"  %></li>
+          <li><%= link_to "Blog", "#"  %></li>
         </ul>
         <ul class="nav pull-right">
           <% if signed_in? %>
