--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Idioms#show</h1>
-<p>Find me in app/views/idioms/show.html.erb</p>
+<%= content_for(:title) { @idiom.title} %>
+
+<h1><%= @idiom.title %></h1><br>
+<p><%= @idiom.description %></p>
+
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              idioms_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_idiom_path(@idiom), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              idiom_path(@idiom),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
