Added links on index and show page for tags

--- a/app/views/idioms/_idiom.html.erb
+++ b/app/views/idioms/_idiom.html.erb
@@ -1,4 +1,4 @@
 <li>
   <%= link_to idiom.title, idiom %><br>
-  <p><%= idiom.description %></p>
-</li>
+  <span>    Tags: <%= render idiom.tags %></span>
+</li><br>
