--- a/app/views/idioms/index.html.erb
+++ b/app/views/idioms/index.html.erb
@@ -2,6 +2,12 @@
 
 <h1>Languages</h1>
 
+<div id="tag_cloud">
+  <% tag_cloud Idiom.tag_counts, %w[s m l] do |tag, css_class| %>
+    <%= link_to tag.name, tag_path(tag.name), class: css_class %>
+  <% end %>
+</div>
+
 <%= link_to "Create a new idiom", new_idiom_path, 
     class: "btn btn-small btn-success" %><br />
 
