--- a/app/views/edits/index.html.erb
+++ b/app/views/edits/index.html.erb
@@ -1,16 +1,16 @@
 <%= content_for(:title) { "Edits history for #{@idiom.title}" } %>
 
-<h1>Edits history for <%= @idiom.title %></h1>
+<h1>Edits history for <%= link_to @idiom.title, @idiom %></h1>
 
 <%= content_for(:sidebar) do %>
   <h4>Current Description: </h4>
   <p><%= @idiom.description %> </p>
   <span class="time">
-    posted at <%= @idiom.updated_at.strftime("%Y-%m-%d %H:%M") %> 
+    posted at <%= link_to @idiom.updated_at.strftime("%Y-%m-%d %H:%M") %> 
   </span>
 <% end %>
 
 
 <ul class="edits">
-  <%= render @edits %>
+  <%= render @edits, object: @idiom %>
 </ul>
