--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -5,6 +5,16 @@
 <p><%= @idiom.description %></p>
 
 <span>Tags: <%= render @idiom.tags %></span><br>
+<%= simple_form_for [@idiom, @vote], html: { id: "upvote", class: 'btn' }, 
+    remote: true do |f| %>
+  <%= f.hidden_field :vote_value, value: 1 %>
+  <%= f.button :submit, "Upvote" %>
+<% end %>
+<%= simple_form_for [@idiom, @vote], html: { id: "downvote", class: "btn" }, 
+    remote: true do |f| %>
+  <%= f.hidden_field :vote_value, value: -1 %>
+  <%= f.button :submit, "Downvote" %>
+<% end %>
 
 <% if @idiom.comments.any? %>
 <h2>Comments</h2>
