Added the upvote/downvote in the sidebar, and added functionality for a working total_score method, wrote a test for validations on vote, but not yet on the total_score method

--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -3,4 +3,5 @@
 <% else %>
   $('#downvote').addClass('btn-success')
 <% end %>
+$('#votes_count').replaceWith('<%= j @vote.voteable.total_score %>')
 
