--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -1,20 +1,30 @@
 <%= content_for(:title) { @idiom.title} %>
 
-<h1><%= @idiom.title %></h1>
+<%= content_for :sidebar do %>
+  <h4>Please give us your feedback</h4>  
+  <p>Upvote for a good description.  You can see more possibilities
+   in the edits history</p>
+  <%= simple_form_for [@idiom, @vote], html: { id: "upvote", 
+    class: 'btn btn-small' }, remote: true do |f| %>
+    <%= f.hidden_field :vote_value, value: 1 %>
+    <%= f.button :submit, "Upvote" %>
+  <% end %>
+
+  <%= simple_form_for [@idiom, @vote], html: { id: "downvote", 
+    class: "btn btn-small" }, remote: true do |f| %>
+    <%= f.hidden_field :vote_value, value: -1 %>
+    <%= f.button :submit, "Downvote" %>
+  <% end %><br><br>
+
+  Total Score: <span id="votes_count"><%= @idiom.total_score %></span>
+<% end %>
+
+<h1><%= @idiom.title %></h1> 
 <%= link_to "Edits history", idiom_edits_path(@idiom) %><br>
 <p><%= @idiom.description %></p>
 
 <span>Tags: <%= render @idiom.tags %></span><br>
-<%= simple_form_for [@idiom, @vote], html: { id: "upvote", class: 'btn' }, 
-    remote: true do |f| %>
-  <%= f.hidden_field :vote_value, value: 1 %>
-  <%= f.button :submit, "Upvote" %>
-<% end %>
-<%= simple_form_for [@idiom, @vote], html: { id: "downvote", class: "btn" }, 
-    remote: true do |f| %>
-  <%= f.hidden_field :vote_value, value: -1 %>
-  <%= f.button :submit, "Downvote" %>
-<% end %>
+
 
 <% if @idiom.comments.any? %>
 <h2>Comments</h2>
