--- a/app/views/votes/update.js.erb
+++ b/app/views/votes/update.js.erb
@@ -5,3 +5,4 @@
   $('#downvote').addClass('btn-success')
   $('#upvote').removeClass('btn-success')
 <% end %>
+$('#votes_count').html('<%= @vote.voteable.total_score.to_s %>')
