--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -5,13 +5,15 @@
   <p>Upvote for a good description.  You can see more possibilities
    in the edits history</p>
   <%= simple_form_for [@idiom, @vote], html: { id: "upvote", 
-    class: 'btn btn-small' }, remote: true do |f| %>
+    class: ( @vote.vote_value == 1 ) ? 'btn btn-small btn-success' : 
+    'btn btn-small' }, remote: true do |f| %>
     <%= f.hidden_field :vote_value, value: 1 %>
     <%= f.button :submit, "Upvote" %>
   <% end %>
 
   <%= simple_form_for [@idiom, @vote], html: { id: "downvote", 
-    class: "btn btn-small" }, remote: true do |f| %>
+    class: ( @vote.vote_value == -1 ) ? 'btn btn-small btn-success' : 
+    'btn btn-small'  }, remote: true do |f| %>
     <%= f.hidden_field :vote_value, value: -1 %>
     <%= f.button :submit, "Downvote" %>
   <% end %><br><br>
