--- a/app/views/comments/_upvote.html.erb
+++ b/app/views/comments/_upvote.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [vote.voteable.idiom, vote.voteable, vote], 
-  html: { id: "comment_upvote", class: "active_upvote"}, 
+  html: { id: "comment_upvote_#{vote.voteable.id}", class: "active_upvote"}, 
   remote: true do |f| %>
  <%= f.hidden_field :vote_value, value: 1 %>
- <%= f.button :submit, '+', id: "comment_upvote", class: "btn-success" %>
+ <%= f.button :submit, '+', id: "comment_upvote_button_#{vote.voteable.id}" %>
 <% end %>   
