--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -10,12 +10,19 @@
   $('#votes_count').html('<%= @vote.voteable.total_score.to_s %>')
 <% elsif @vote.voteable.class.to_s == "Comment" %>
   <% if @vote.vote_value == 1 %>
-    $('#comment_upvote').replaceWith('<%= j render "comments/upvote", 
-        vote: @vote %>')
+    $('#comment_upvote_<%= @vote.voteable.id.to_s %>').
+      replaceWith('<%= j render "comments/upvote", vote: @vote %>')
+    $('#comment_downvote_<%= @vote.voteable.id %>').
+      replaceWith('<%= j render "comments/downvote", vote: @vote %>') 
+    $('#comment_upvote_button_<%= @vote.voteable.id %>').addClass('btn-success') 
   <% else %>
-
+    $('#comment_upvote_<%= @vote.voteable.id.to_s %>').
+      replaceWith('<%= j render "comments/upvote", vote: @vote %>')
+    $('#comment_downvote_<%= @vote.voteable.id %>').
+      replaceWith('<%= j render "comments/downvote", vote: @vote %>') 
+    $('#comment_downvote_button_<%= @vote.voteable.id %>').addClass('btn-success')        
   <% end %>
-
+  $('#score_<%= @vote.voteable.id %>').html('<%= @vote.voteable.total_score %>')
 <% elsif @vote.voteable.class.to_s == "Edit" %>
   <% if @vote.vote_value == 1 %>
     alert("FUCK ME")
