Finally got all the ajax on show page working

--- a/app/views/idioms/_downvote.html.erb
+++ b/app/views/idioms/_downvote.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [vote.voteable, vote], html: { id: "downvote", 
-  class: 'btn btn-small btn-success' }, remote: true do |f| %>
+  class: 'btn btn-small' }, remote: true do |f| %>
   <%= f.hidden_field :vote_value, value: -1 %>
   <%= f.button :submit, "Downvote" %>
 <% end %>
