--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -7,7 +7,7 @@
   <% else %>
     $('#downvote').addClass('btn-success')
     $('#downvote').replaceWith('<%= j render "idioms/downvote", vote: @vote %>') 
-    $('#upvote').replaceWith('<%= j render "idioms/upvote", vote: @vote %>')       
+    $('#upvote').replaceWith('<%= j render "idioms/upvote", vote: @vote %>')         
     $('#upvote').removeClass('btn-success')
   <% end %>
   $('#votes_count').html('<%= @vote.voteable.total_score.to_s %>')
@@ -28,9 +28,9 @@
   $('#score_<%= @vote.voteable.id %>').html('<%= @vote.voteable.total_score %>')
 <% elsif @vote.voteable.class.to_s == "Edit" %>
   <% if @vote.vote_value == 1 %>
-    alert("FUCK ME")
+    alert('edit 1')
   <% else %>
-
+    alert('edit -1')
   <% end %>
 
 <% end %>  
