edited_by function which is kind of working, tried to add support for contributors in sidebar, half working

--- a/app/views/edits/_edit.html.erb
+++ b/app/views/edits/_edit.html.erb
@@ -1,6 +1,9 @@
 <li>
-  <p><%= edit.description %></p>
-  <span>Edited by <%= link_to edit.user.name, edit.user %> at </span>
-  <span class="time">
-    <%= link_to edit.edited_at.strftime("%Y-%m-%d %H:%M"), [object, edit] %></span>
+  <p><%= edit.description %>
+    <span>Edited by <%= link_to edit.user.name, edit.user %> at </span>
+    <span class="time">
+    <small><%= link_to edit.edited_at.strftime("%Y-%m-%d %H:%M"), [object, edit] %>
+    </small></span>
+  </p>
+  
 </li>
