--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -1,3 +1,4 @@
+<%#= Sorry for anyone that has to read this fuckfest %>
 <%= content_for(:title) { @idiom.title} %>
 
 <%= content_for :sidebar do %>
