Added styling to color votes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,3 +28,15 @@ textarea {
   display: inline;
 }
 
+.positive {
+  color: green;
+}
+
+.negative {
+  color: red;
+}
+
+#name {
+  font-weight: italic;
+  font-size: 75%;
+}
