--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -15,7 +15,14 @@
       class: @comment_vote.vote_value == -1 ? 'btn-success' : "" %>
  <% end %>
  <span class="comment_body"><%= comment.message %></span>
- Score: <span id="score_<%= comment.id %>"><%= comment.total_score %></span>
+   Score: <span id="score_<%= comment.id %>" 
+    class= "<%= comment.total_score >= 0 ? 'positive' : 'negative' %>">
+  <%= comment.total_score %>
+  </span><br>
+ <span id="name">
+  posted by <%= link_to comment.user.name, comment.user %> at 
+    <%= time_ago_in_words(comment.created_at) %> ago.
+ </span>
 
     <%#= link_to "(+)", [@idiom, comment, @comment_vote], 
       { params: {vote_value: 1} }, method: :post, action: :create,
