--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -10,7 +10,7 @@
     $('#upvote').replaceWith('<%= j render "idioms/upvote", vote: @vote %>')         
     $('#upvote').removeClass('btn-success')
   <% end %>
-  $('#votes_count').html('<%= @vote.voteable.total_score.to_s %>')
+  $('#votes_count').html('<%= proper_score @vote %>')
 <% elsif @vote.voteable.class.to_s == "Comment" %>
   <% if @vote.vote_value == 1 %>
     $('#comment_upvote_<%= @vote.voteable.id.to_s %>').
@@ -25,7 +25,7 @@
       replaceWith('<%= j render "comments/downvote", vote: @vote %>') 
     $('#comment_downvote_button_<%= @vote.voteable.id %>').addClass('btn-success') 
   <% end %>         
-  $('#score_<%= @vote.voteable.id %>').html('<%= @vote.voteable.total_score %>')
+  $('#score_<%= @vote.voteable.id %>').html('<%= proper_score @vote %>')
 <% elsif @vote.voteable.class.to_s == "Tag" %>
   <% if @vote.vote_value == 1 %>
     $('#tag_upvote_<%= @vote.voteable.id.to_s %>').
