--- a/app/views/idioms/show.html.erb
+++ b/app/views/idioms/show.html.erb
@@ -13,7 +13,7 @@
     <% end %>
 
     <%= simple_form_for [@idiom, @vote], html: { id: "downvote", 
-      class: ( @vote.vote_value == -1 ) ? 'btn btn-small btn-success' : 
+      class: ( @vote.vote_value == -1 ) ? 'btn btn-small btn-danger' : 
       'btn btn-small'  }, remote: true do |f| %>
       <%= f.hidden_field :vote_value, value: -1 %>
       <%= f.button :submit, "Downvote" %>
@@ -34,7 +34,7 @@
       html: { id: "tag_downvote_#{@tag_for_voting.id}"}, remote: true do |f| %>
      <%= f.hidden_field :vote_value, value: -1 %>
      <%= f.button :submit, '-', id: "tag_downvote_button_#{@tag_for_voting.id}",
-        class: @tag_vote.vote_value == -1 ? 'btn-success' : "" %>
+        class: @tag_vote.vote_value == -1 ? 'btn-danger' : "" %>
    <% end %>
   </span>
 
