--- a/app/views/edits/index.html.erb
+++ b/app/views/edits/index.html.erb
@@ -4,7 +4,8 @@
 
 <%= content_for(:sidebar) do %>
   <h4>Originally posted by: </h4>
-  <span><%= link_to @idiom.user.name, @idiom.user %> at <%= @idiom.created_at.strftime("%Y-%m-%d %H:%M") %> </span>
+  <span><%= link_to @idiom.user.name, @idiom.user %>  
+    <%= time_ago_in_words @idiom.created_at %> ago. </span>
   <h4>Contributors: </h4>
   <ul>
     <% @contributors.each do |hash| %>
