--- a/app/views/tags/_upvote.html.erb
+++ b/app/views/tags/_upvote.html.erb
@@ -1,6 +1,6 @@
- <%= simple_form_for [vote.voteable.idiom, vote.voteable, vote], 
-    html: { id: "tag_upvote_#{vote.id}"}, remote: true do |f| %>
+ <%= simple_form_for [vote.voteable.idioms.find(params[:idiom_id]), vote.voteable, vote], 
+    html: { id: "tag_upvote_#{vote.voteable.id}"}, remote: true do |f| %>
    <%= f.hidden_field :vote_value, value: 1 %>
-   <%= f.button :submit, '+', id: "tag_upvote_button_#{vote.id}", 
+   <%= f.button :submit, '+', id: "tag_upvote_button_#{vote.voteable.id}", 
        class: vote.vote_value == 1 ? 'btn-success' : "" %>
  <% end %>  
