Got twitter login working and did some styling on login pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,3 +40,18 @@ textarea {
   font-weight: italic;
   font-size: 75%;
 }
+
+#twitter {
+  width: 100px;
+  height: 100px;
+}
+
+.login_forms {
+  display: inline;
+  float: left;
+  .logins {
+    float: right;
+  }
+}
+
+
