--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,8 @@
   <dd><%= @user.about_me %></dd>
 </dl>
 
-<%= link_to "Send #{@user.name} a message.", new_user_message_path(@user) %>
+<%= link_to "Send #{@user.name} a message.", new_user_message_path(@user),
+  id: "new_message", remote: true unless @user == current_user  %>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
