Added gravatars, some styling on messages

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,8 +1,10 @@
 <li class="messages">
   <small>
+    <%= link_to (gravatar_image_tag message.sender.email, gravatar: 
+      { default: :monsterid, size: 30 }), message.sender %>
     <%= link_to message.sender.name, message.sender %>
-     <%= message.sender == current_user ? "Sent " : "Received " %> at 
-     <%= time_ago_in_words message.created_at %> ago.
+    <%= message.sender == current_user ? "Sent " : "Received " %> at 
+    <%= time_ago_in_words message.created_at %> ago.
   </small>
   <p><%= message.body %></p>
 </li>
