--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:email) %></th>
       <th><%= model_class.human_attribute_name(:about_me) %></th>
@@ -16,6 +17,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= gravatar_image_tag user.email, gravatar: 
+              { default: :monsterid } %></td>
         <td><%= link_to user.name, user %></td>
         <td><%= user.email %></td>
         <td><%= user.about_me %></td>
