--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt></dt>
+  <dd><%= gravatar_image_tag @user.email, gravatar: { default: :monsterid} %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @user.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:email) %>:</strong></dt>
