changed some of the methods to be a bit simpler in conversation/inbox, updated views to accommodate them

--- a/app/views/inboxes/show.html.erb
+++ b/app/views/inboxes/show.html.erb
@@ -1,3 +1,4 @@
+<%= content_for(:title) { "Inbox (#{@new_message_count}" } %>
 <h1>Inbox (<%= @new_message_count %>)</h1>
 
 <ul id="conversations">
