Added admin users and dashboard controllers, and some views, and some basic crappy test coverage in admin_dashboards_spec

--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -15,7 +15,7 @@
         </ul>
         <ul class="nav pull-right">
           <% if signed_in? %>
-          <li><%= link_to "Dashboard", '#'  %></li>
+          <li><%= link_to "Dashboard", admin_path if current_user.admin? %></li>
           <li><%= link_to "Inbox (#{current_user.inbox.unread_count})", 
             [current_user, current_user.inbox] %></li>
           <li><%= link_to "Sign out", logout_path, method: :delete  %></li>
